[workspace]
resolver = "2"
members = [
    "rtt-quantiles",
    "rtt-quantiles-ebpf",
    "rtt-tdigest",
]
default-members = ["rtt-quantiles"]

[workspace.package]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
aws-sdk-dynamodb = "1.80.0"
aws-config = { version = "1.8.0", features = ["behavior-version-latest"] }
aya = { version = "0.13.1", default-features = false }
aya-build = { version = "0.1.2", default-features = false }
aya-ebpf = { version = "0.1.1", default-features = false }
aya-log = { version = "0.2.1", default-features = false }
aya-log-ebpf = { version = "0.1.1", default-features = false }
bincode = "2.0.1"
chrono = { version = "0.4.41", features = ["serde"] }
serde_json = "1.0.140"
tdigest = { version = "0.2.3", features = ["use_serde"] }
anyhow = { version = "1", default-features = false }
# `std` feature is currently required to build `clap`.
#
# See https://github.com/clap-rs/clap/blob/61f5ee5/clap_builder/src/lib.rs#L15.
clap = { version = "4.5.20", default-features = false, features = ["std"] }
env_logger = { version = "0.11.5", default-features = false }
libc = { version = "0.2.159", default-features = false }
log = { version = "0.4.22", default-features = false }
tokio = { version = "1.40.0", default-features = false }
which = { version = "6.0.0", default-features = false }

[profile.release.package.rtt-quantiles-ebpf]
debug = 2
codegen-units = 1
