[package]
name = "rtt-tdigest"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
aws-sdk-dynamodb = { workspace = true }
chrono = { workspace = true }
tdigest = { workspace = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { workspace = true }
anyhow = "1.0.98"

